<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actualizar">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ecedeb"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/textoActualizacion"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="------------------------------------------------------------------------------------------" />

    <TextView
        android:id="@+id/txtTvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ecedeb"
        android:gravity="center_vertical|center_horizontal"
        android:text="TextView"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtActCap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoCapital"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtActNHab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoNHabit"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtTvConti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ecedeb"
        android:gravity="center_vertical|center_horizontal"
        android:text="TextView"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtActIdioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoIdioma"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtActMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textoMoneda"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ecedeb"
        android:gravity="center_horizontal|center"
        android:text="@string/textoTGobierno"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerActTipGob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="------------------------------------------------------------------------------------------" />

    <Button
        android:id="@+id/btnActualizar2"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textoActualizar"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>